{{$NEXT}}

    - Accept trailing dot on hostnames as well.

0.12     2016-06-05
    - Accept trailing dot on a domain name ("example.com."). This is an
      absolute name per RFCs 1034 & 1035, and will be accepted by any DNS
      resolution library or tool. Reported by Rob J. Epping.

0.11     2015-05-05
    - Don't allow non-ASCII digits in domain labels, RT #103121.

0.10     2010-12-29
    - Fixed bug 41033, no longer allows \n in domain_labels
        Thanks to marek.miska@netart.pl for reporting the bug

0.09     2008-02-18
    - Added new option of domain_allow_underscore to allow this module
      to be used for validating domainnames like _spf.neely.cx if the option is set
      Default behavior was not changed

0.08     2007-05-17
    - Ugh, forgot to add new tests to MANIFEST

0.07     2007-05-17
        - Added POD testing, and minor cleanup related to that

0.06     2007-05-16
    - Updated contact information to be neil@neely.cx, this is a purely cosmetic change

0.05     2006-12-04
    - Added Support for compiled regular expressions to the private_domain_tld option.
        - Thanks to Berhhard Graf <graf@augensalat.de> for the suggestion.

0.04     2006-12-01
    - Added support for options to alter behavior of is_domain with these new
      options is_domain will be able to work with private domains with custom TLD's.
        - Special Thanks to Len Reed <lreed@levanta.com> for not only suggesting
          the need for this but supplying several patches to help steer this
          solution in the right direction.  Also made several documentation
                  improvements.
        - Additional thanks to Richard Sonnen <sonnen@richardsonnen.com> for
          helping flush out the details of how to utilize options in the
                  Data::Validate name space portably.

0.03     2005-11-03
    - Updated to support new procedural version of Net::Domain::TLD