@@ -6,10 +6,12 @@ copyright_holder = Neil Neely
 
 [@DROLSKY]
 dist = Data-Validate-Domain
+stopwords = gTLDs
 stopwords = Sonnen
 stopwords = TLD
 stopwords = TLDs
 stopwords = cx
+stopwords = gTLDs
 stopwords = neely
 stopwords = uk
 stopwords = www
