@@ -1,6 +1,9 @@
 {{$NEXT}}
 
     - Accept trailing dot on hostnames as well.
+    - The option domain_disable_tld_validation was added to allow disabling
+      TLD validation. This may be useful if you need to check domains with new
+      gTLDs that have not yet been added to Net::Domain::TLD.
 
 0.12     2016-06-05
     - Accept trailing dot on a domain name ("example.com."). This is an
